2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add texinfo manual.

	* doc: New directory.
	* doc/fdl.texi: New file (from gnulib fdl-1.3.texi).
	* doc/texinfo.tex: New file (from texinfo 4.13).
	* doc/Makefile.in: New file.
	* doc/rcs.texi: New file.
	* configure.in (AC_CONFIG_FILES): Add doc/Makefile.
	* Makefile.in (doc): New target.
	(dist): Make `doc' before `distclean'.
	In dist dir, create subdir doc/; populate it from doc/.

2010-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Distribute the config header template.

	* Makefile.in (dist) For subdir src/, specify *.in
	to include both Makefile.in and auto-sussed.h.in.

2010-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add basic "make check" support.

	* Makefile.in (standard_GNU_targets): Remove check.
	(check): New target.
	(dist): Update name of test program to distribute.
	* README: Update; no longer mention RCSPREFIX, installdebug.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add check for GCC attribute `unused'.

	* configure.in (unused): New RCS_CHECK_GCC_ATTRIBUTE.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move all DIFF* config to configure.in; assume diffutils.

	* configure.in (RCS_SET_VN): New AC_DEFUN.
	(diffutils): Delete AC_ARG_WITH.
	(DIFF_MAYBE): New AC_DEFUN.
	(DIFF): Document with AC_VAR_ARG; search list DIFF_MAYBE; check
	that specified program behaves like GNU diff, else error out.
	(RCS_CHECK_STATUS): New AC_DEFUN.
	(DIFF_SUCCESS, DIFF_FAILURE, DIFF_TROUBLE): Use `RCS_CHECK_STATUS'.
	(DIFF3_MAYBE): New AC_DEFUN.
	(DIFF3): Document with AC_VAR_ARG; search list DIFF3_MAYBE; if
	specified program does not behave like GNU diff3, don't bother
	looking for one under /usr/lib, etc, just let ed(1) handle it.
	(DIFFFLAGS, DIFF_L, DIFF3_BIN): Compute vars
	internally; don't let environment influence them.
	* README: Update.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Require absolute filenames for external programs.
