@@ -1,5 +1,13 @@
 2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[v] Add a directory dedicated to verification.
+
+	* configure.in (AC_CONFIG_FILES): Add v/Makefile, v/common.
+	* Makefile.in (installcheck): No longer do in man/; do in v/.
+	(check): Also do in v/.
+
+2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[doc] Add texinfo manual.
 
 	* doc: New directory.
